Fix alignment in the main nav #580

--- a/src/sass/_menu-page.scss
+++ b/src/sass/_menu-page.scss
@@ -82,6 +82,8 @@
 }
 
 .site-header__close_nav {
+  align-self: center;
+
   &::before {
     border: 0;
     clip: rect(0 0 0 0);
